<?xml version="1.0"?>
<package format="2">
  <name>ros_topic_sync</name>
  <version>0.0.0</version>
  <description>advanced topic synchronization</description>

  <maintainer email="todo@to.do">xaedes</maintainer>
  <license>MIT</license>
  <author email="todo@to.do">xaedes</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>ros_cmake_generate_dependency</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>



</package>